--- a/BlazorComponents/Client/App.razor
+++ b/BlazorComponents/Client/App.razor
@@ -21,5 +21,8 @@
                 <p role="alert">Sorry, there's nothing at this address.</p>
             </LayoutView>
         </NotFound>
+        <Navigating>
+            <LoadingSignal />
+        </Navigating>
     </Router>
 </CascadingAuthenticationState>
