--- a/BlazorComponents/Client/_Imports.razor
+++ b/BlazorComponents/Client/_Imports.razor
@@ -12,3 +12,6 @@
 @using BlazorComponents.Client.Services
 @using BlazorComponents.Client.Models
 @using BlazorComponents.Client.Components
+@using BlazorComponents.Client.Auth
+@using BlazorComponents.Shared.Auth
+@using Microsoft.AspNetCore.Authorization
