--- a/BlazorComponents/Client/Pages/Tree.razor
+++ b/BlazorComponents/Client/Pages/Tree.razor
@@ -23,7 +23,7 @@
     <code>@("Func<T, TReturnType>")</code>, allowing for lots of flexibility.
 </p>
 
-<div style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 15px" class="mt-4">
+<div style="display: grid; grid-template-columns: 1fr 1fr; column-gap: 15px" class="mt-4">
 
     <div>
         <TreeView DataSource="TreeNodes"
