--- a/BlazorComponents/Client/Shared/NavMenu.razor
+++ b/BlazorComponents/Client/Shared/NavMenu.razor
@@ -57,7 +57,7 @@
         </div>
           <div class="nav-item px-3">
             <NavLink class="nav-link" href="alerts">
-                <span class="oi oi-bell" aria-hidden="true"></span> Alerts
+                <span class="oi oi-warning" aria-hidden="true"></span> Alerts
             </NavLink>
         </div>
          <div class="nav-item px-3">
