Add dropdown button.

--- a/BlazorComponents/Client/Pages/Index.razor
+++ b/BlazorComponents/Client/Pages/Index.razor
@@ -129,6 +129,14 @@
         </ul>
     </li>
     <li>
+        Dropdown button.
+        <ul>
+            <li>
+                Provides a simple implementation of Bootstrap's Dropdown component.
+            </li>
+        </ul>
+    </li>
+    <li>
         JavaScript Interop
         <ul>
             <li>
