--- a/BlazorComponents/Client/Shared/NavMenu.razor
+++ b/BlazorComponents/Client/Shared/NavMenu.razor
@@ -60,6 +60,11 @@
                 <span class="oi oi-warning" aria-hidden="true"></span> Alerts
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dropdowns">
+                <span class="oi oi-arrow-bottom" aria-hidden="true"></span> Dropdowns
+            </NavLink>
+        </div>
          <div class="nav-item px-3">
             <NavLink class="nav-link" href="js-interop">
                 <span class="oi oi-script" aria-hidden="true"></span> JS Interop
